--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html lang="pt">
 
 <head>
-    <link rel="stylesheet" href="../indice.css">
+    <link rel="stylesheet" href="CSS/index.css">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English:ital@0;1&display=swap');
@@ -13,21 +13,31 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta http-equiv='cache-control' content='no-cache'> 
+    <meta http-equiv='expires' content='0'> 
+    <meta http-equiv='pragma' content='no-cache'>
    
     <title>CSC • Indice</title>
+    <link rel="icon" href="logos/icone.png">
 </head>
 
 <body>
     <div>
+
+    </div>
+        <img id="logo" src="logos/csx3.png" alt="logo">
+
         <!-- Barra de Navegação -->
 
         <nav>
             <ul class="nav">
-                <li class="nav"><a class="nav" href="indice.html">Sobre</a></li>
-                <li class="nav"><a class="nav" href="">Bibliotheca</a></li>
-                <li class="nav"><a class="nav" href="">Revista</a></li>
+                <li class="nav"><a class="nav" href="sobre.html">Sobre</a></li>
+                <li class="nav"><a class="nav" href="bibliotheca.html">Bibliotheca</a></li>
+                <li class="nav"><a class="nav" href="revista.html">Revista</a></li>
             </ul>
         </nav>
+    <div>
         <!-- Citação dos Lusiadas -->
         
         <p id="lusiadas1">« Eis aqui, quase cume da cabeça
