--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
             Levantamos o exemplo de D. Nuno Alvares Pereira, o sancto condestavel, como nosso padroeiro e exemplo atravez da sua devoção á Immaculada Virgem Maria e defesa da Patria Portugueza.
         </p>
 
-        <p id="lema">PELO SANCTO CONDESTAVEL DE PORTUGAL</p>
+        <marquee behavior="" direction="">
+
+            <p id="lema">PELO SANCTO CONDESTAVEL DE PORTUGAL</p>
+            
+        </marquee>
 
         <img id="divlema" class="divisor" src="divisores/divisor1.png" alt="divisor">
 
