--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 </head>
 
 <body>
-    <div>
 
-    </div>
-        <img id="logo" src="logos/csx3.png" alt="logo">
+    <div>
+        <a href="index.html"><img id="logo" src="logos/csx3.png" alt="logo"></a>
 
         <!-- Barra de Navegação -->
 
@@ -37,6 +36,8 @@
                 <li class="nav"><a class="nav" href="revista.html">Revista</a></li>
             </ul>
         </nav>
+    </div>
+
     <div>
         <!-- Citação dos Lusiadas -->
         
@@ -48,7 +49,7 @@
 
         <img class="divisor" src="divisores/divisor1.png" alt="divisor">
 
-        <!-- MANIFESTO -->
+        <!-- Manifesto -->
 
         <p>
             Somos uma pagina digital contra-revolucionaria: monarchica, reaccionaria e catholica.
