--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!-- Para quem esteja a ler isto, ou porque accidentalmente transferiu esta pagina, ou porque está curioso para analyzar a estructura do portal, deixei com maxima precisão commentarios para que ajudem a comprehender a pagina que aqui produzo. Sou um grande defensor da creação de mais paginas pequenas, como esta, na Internet. Que sejam feitas por paixão e não por negocio. Um voto de bom-sucesso a quem está a começar o precurso.-->
+
 <html lang="pt">
 
 <head>
@@ -17,23 +19,25 @@
     <meta http-equiv='pragma' content='no-cache'>
    
     <title>CSC • Indice</title>
+    <link rel="icon" href="logos/icone.png">
 </head>
 
 <body>
-    <div>
 
-    </div>
-        <img id="logo" src="logos/csx3.png" alt="logo">
+    <div>
+        <a href="index.html"><img id="logo" src="logos/csx3.png" alt="logo"></a>
 
         <!-- Barra de Navegação -->
 
         <nav>
             <ul class="nav">
                 <li class="nav"><a class="nav" href="sobre.html">Sobre</a></li>
-                <li class="nav"><a class="nav" href="">Bibliotheca</a></li>
-                <li class="nav"><a class="nav" href="">Revista</a></li>
+                <li class="nav"><a class="nav" href="bibliotheca.html">Bibliotheca</a></li>
+                <li class="nav"><a class="nav" href="revista.html">Revista</a></li>
             </ul>
         </nav>
+    </div>
+
     <div>
         <!-- Citação dos Lusiadas -->
         
@@ -59,7 +63,11 @@
             Levantamos o exemplo de D. Nuno Alvares Pereira, o sancto condestavel, como nosso padroeiro e exemplo atravez da sua devoção á Immaculada Virgem Maria e defesa da Patria Portugueza.
         </p>
 
-        <p id="lema">PELO SANCTO CONDESTAVEL DE PORTUGAL</p>
+        <marquee behavior="" direction="">
+
+            <p id="lema">PELO SANCTO CONDESTAVEL DE PORTUGAL</p>
+            
+        </marquee>
 
         <img id="divlema" class="divisor" src="divisores/divisor1.png" alt="divisor">
 
